# dolist-parser

./: .gitignore  README.md  parser.py  pyproject.toml  setup.py
.github/workflows/: ci-main.yml  publish.yml
docs/: pull_request_template.md
dolist_parser/: __init__.py  __main__.py  definition.py  dolist_parser.py  main.py
dolist_parser/parsers/: base.py  javascript_gh.py  python.py
dolistparser/: __init__.py  __main__.py  main.py
dolistparser/_internal/: __init__.py
dolistparser/_internal/interfaces/: api.py
dolistparser/_internal/parsers/: base.py  javascript.py  javascript_gh.py  python.py  python_gh.py
dolistparser/parsers/: base.py  python_gh.py
scripts/: build.sh  publish.sh
src/: __init__.py  __main__.py  main.py  parser.py  utils.py
src/parsers/: base.py  javascript.py  js.py  py.py
tests/: test_parser.py
tests/main/: test_main.py
tests/main/data/: javascript.js
tests/main/data/folder_b/: folder_b.ts
tests/main/src/: python.py  typescript.ts
tests/parser/: test_js_parser.py  test_main.py  test_parser.py
tests/parser/data/: javascript.js  typescript.ts
tests/parser/js/: test_js_parser.py  test_new_js_parser.py
tests/parser/js_gh/: test_js_gh_parser.py
tests/parser/js_gh/src/: javascript.js  typescript.ts
tests/parser/py_gh/: test_py_gh_parser.py
tests/parser/python/: test_new_py_parser.py  test_py_parser.py
tests/parser/python/src/: python.py
