[tool.poetry]
name = "dolistparser"
version = "0.2.1"
description = "Parse to-dos from the comment"
authors = ["yunjae <yunjae.oh.nl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
